# T-AIA-911

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DATASET.md  GEO.md  NLP.md  PATHFINDING.md  PLAN_TO_IMPROVE_VOICE_RECO.md  PROMPT.md  RAPPORT-v2.md  RAPPORT.md  README.md  TO-DO.md  pres.html  pyproject.toml  template.html
configs/: spacy_config.cfg
data/: connexions.csv  gares-france.csv  gares-sncf.csv
data/templates/: ambiguous.txt  arrival_first.txt  compound_cities.txt  departure_first.txt  invalid.txt  name_cities.txt  name_city_contexts.txt  via.txt  via_multi.txt
explications/: 1. pourquoi_ces_modeles.md  12. entrainement_spacy.md  12.2 Warmup.md  12.3 Dropout.md  12.5 Early_Stopping.md  12.6 F1Score.md  13. entrainement_camembert.md  2. Schema_BIO.md  3. Metriques_NER.md  4. Transformer.md  AdamOptimizer.md  EarlyStopping.md  Fine_tuning.md  MaxoutWindowEncoder.md  MultiHashEmbed.md  Tok2Vec.md  Tok2VecListener.md  Tokenization_BPE.md  TransitionBasedParser.md  entrainement_spacy.md  pourquoi_ces_modeles.md
scripts/: evaluate.py  fetch_gares.py  fetch_gtfs_connections.py  fetch_sncf_connections.py  fetch_sncf_stations.py  make_dataset.py  train_camembert.py  train_spacy.py
src/: __init__.py  main.py
src/geo/: __init__.py  city_resolver.py  distance.py  nearest_station.py
src/nlp/: __init__.py  baseline.py  camembert_ner.py  preprocessing.py  spacy_ner.py
src/pathfinding/: __init__.py  dijkstra.py  graph.py
src/web/: app.py
src/web/templates/: docs.html  index.html
tests/: __init__.py  test_geo.py  test_nlp.py  test_pathfinding.py
