[project]
name = "travel-order-resolver"
version = "0.1.0"
description = "NLP system to extract departure/arrival cities from French sentences and generate SNCF train itineraries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # NLP
    "spacy>=3.7.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "datasets>=2.16.0",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    # Geolocation
    "scipy>=1.11.0",
    # Pathfinding
    "networkx>=3.2.0",
    # Web interface
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    # Progress bars
    "tqdm>=4.66.0",
    "accelerate>=0.26.0",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]
